--- a/tms/src/app/logeffort/logeffort.component.html
+++ b/tms/src/app/logeffort/logeffort.component.html
@@ -9,7 +9,7 @@
 									<mat-icon>event</mat-icon>&nbsp;&nbsp;&nbsp;&nbsp;
 									<mat-form-field class="example-full-width">
 										<input matInput placeholder="" value="{{today | date:'fullDate'}}" disabled>
-									</mat-form-field>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+									</mat-form-field>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 									<mat-icon>alarm</mat-icon>&nbsp;&nbsp;&nbsp;&nbsp;
 									<mat-form-field class="example-full-width">
 										<input matInput placeholder="" value="{{today | date:'shortTime'}}" disabled>
