--- a/src/app/dash/dash.component.css
+++ b/src/app/dash/dash.component.css
@@ -22,6 +22,8 @@
       margin-top: 0; */
       position: absolute;
       top: 0;
+      left: 0;
+      width:100%;
   }
   /* .mat-list-icon {
     color: rgba(0, 0, 0, 0.54);
