--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,17 +5,17 @@
       <mat-card-title>Shiba Inu</mat-card-title>
       <mat-card-subtitle>Dog Breed</mat-card-subtitle>
     </mat-card-header> -->
-    <img mat-card-image src="../assets/images/log.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="/TMS2/assets/img/log.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
       <h2 class="title" style="text-align:center;">Login with your AD account</h2>
       <form class="login-form">
         <mat-form-field class="login-full-width">
-          <input matInput placeholder="Email" type="email" [formControl]="emailFormControl" [(ngModel)]="userData.id" >
-          <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-            Please enter a valid email address
+          <input matInput placeholder="Username" type="text" [formControl]="emailFormControl" [(ngModel)]="userData.username" >
+          <mat-error *ngIf="emailFormControl.hasError('text') && !emailFormControl.hasError('required')">
+            Please enter your Username
           </mat-error>
           <mat-error *ngIf="emailFormControl.hasError('required')">
-            Email is
+            Username is
             <strong>required</strong>
           </mat-error>
         </mat-form-field>
