implements loader component and nested routing issue fix in production build
Change-Id: I90b844b9c4234105ebb1a1d8371a38667bfe6773

--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -37,12 +37,12 @@
             </mat-list-item>
             <mat-list-item class="list-item">
                 <mat-icon mat-list-icon class="list-font">code</mat-icon>
-                <h4 mat-line>{{employee.skill.primary_skill_one}}</h4>
+                <h4 mat-line>{{employee.skill.primary_skill_three}}</h4>
                 <p mat-line>Primary Skill</p>
             </mat-list-item>
             <mat-list-item class="list-item">
                 <mat-icon mat-list-icon class="list-font">code</mat-icon>
-                <h4 mat-line>{{employee.skill.secondary_skill_one}}</h4>
+                <h4 mat-line>{{employee.skill.secondary_skill_three}}</h4>
                 <p mat-line>Secondary Skill</p>
             </mat-list-item>
             <mat-divider></mat-divider>
