logeffort page implementation with approval dummy chart
Change-Id: I149cb5510198b4d1374057ed9f65b67b79335e3d

--- a/src/app/approval/approval.component.html
+++ b/src/app/approval/approval.component.html
@@ -1,3 +1,4 @@
-<p>
-  approval works!
-</p>
+<div style="display: block">
+	<canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
+	 (chartClick)="chartClicked($event)"></canvas>
+</div>
