--- a/src/app/approval/approval.component.html
+++ b/src/app/approval/approval.component.html
@@ -1,4 +1,107 @@
-<div style="display: block">
-	<canvas baseChart [data]="doughnutChartData" [labels]="doughnutChartLabels" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
-	 (chartClick)="chartClicked($event)"></canvas>
+<div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0" fxLayoutAlign="center" style="background-color:transparent; margin-top:40px; margin-bottom:0px">
+	<!-- <a fxFlex="5%">prev</a> -->
+	
+	<div fxFlex="90%">
+	
+		<mat-tab-group [selectedIndex]="selectedTab">
+			<mat-tab *ngFor="let logeffort of days" label={{logeffort.viewValue}}>
+				<!-- background-color:rgba(0,0,0,.04); use it if needed for the tab background -->
+				<div class="container" style="text-align:center;padding:10px; overflow-y:auto ; overflow-x:auto">
+					<!-- submitted/saved state instance -->
+					<div>
+						<div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+							<div fxFlex="100%" style="overflow-x:auto">
+								<mat-card style="padding-left: 4px; padding-right: 4px; padding-top: 4px; overflow-x:auto; height:10cm;">
+
+									<div *ngFor="let emp of employee" style="overflow-x:auto">
+										<mat-grid-list cols="10" style="margin: 0;" [rowHeight]="!i ? '55px' : '50px'">
+											<mat-grid-tile colspan='1' style="background-color: rgba(0,0,0,.04);" role="listitem">
+												{{emp.emp_name}}
+
+											</mat-grid-tile>
+
+											<mat-grid-tile colspan='2' style="background-color: rgba(0,0,0,.04); overflow-x:auto" role="listitem" [colspan]=6 [rowspan]=1>
+
+												<div *ngFor="let pb of progressBar">
+
+													<div style="height:30px; border-style:solid; margin:.5px; border-width:0.25px ; padding-right:5px;" [style.width.px]="pb.width">
+														<label style="font-size: 10px">{{pb.project}}</label>
+
+													</div>
+
+												</div>
+											</mat-grid-tile>
+											<mat-grid-tile colspan='2' style="background-color: rgba(0,0,0,.04);" role="listitem" [colspan]=3 [rowspan]=1>
+												<div style="display: inline-block;">
+													<button mat-raised-button color="primary">Approve</button>
+													<button mat-raised-button color="warn">Reject</button>
+													<button mat-raised-button color="accent" (click)="openDialog()">View Details</button>
+
+
+
+												</div>
+											</mat-grid-tile>
+
+										</mat-grid-list>
+
+									</div>
+									<mat-card-actions style="text-align: right; margin-right: 0px; margin-left: 0px">
+
+										<button mat-raised-button color="primary" style="width:30%">Approve All</button>
+									</mat-card-actions>
+
+								</mat-card>
+
+								<br>
+								<mat-card style="padding-left: 4px; padding-right: 4px; padding-top: 4px; padding-bottom:4px; margin-bottom:0px">
+
+									<mat-card-content>
+										<tr>
+											<td>
+												<div style="display: block; width: 350px; height:350px">
+													<canvas baseChart [data]="doughnutChartData_project" [labels]="doughnutChartLabels_project" [chartType]="doughnutChartType"
+													 (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+													<br>
+													<b>
+														<label style="margin-left: 30px;">Project Wise Graph</label>
+													</b>
+												</div>
+											</td>
+											<td>
+												<div style="display: block; width: 350px; height:350px">
+													<canvas baseChart [data]="doughnutChartData_tasks" [labels]="doughnutChartLabels_tasks" [chartType]="doughnutChartType" (chartHover)="chartHovered($event)"
+													 (chartClick)="chartClicked($event)"></canvas>
+													<br>
+													<b>
+														<label style="margin-left: 40px;">Task Wise Graph</label>
+													</b>
+												</div>
+											</td>
+											<td>
+												<div style="display: block; width: 350px; height:350px">
+													<canvas baseChart [data]="doughnutChartData_skills" [labels]="doughnutChartLabels_skills" [chartType]="doughnutChartType"
+													 (chartHover)="chartHovered($event)" (chartClick)="chartClicked($event)"></canvas>
+													<br>
+													<b>
+														<label style="margin-left: 40px;">Skill Wise Graph</label>
+													</b>
+												</div>
+											</td>
+										</tr>
+									</mat-card-content>
+								</mat-card>
+
+							</div>
+
+						</div>
+
+					</div>
+				</div>
+
+
+
+			</mat-tab>
+		</mat-tab-group>
+	</div>
+
 </div>
