[Implementation] Calendar onClick load respective week Logeffort data and Notfoundcomponent for 404 cases
Change-Id: Ib6e33e98046790a5e4cbbb2316903f1901ae3e01

--- a/src/app/dash/dash.component.html
+++ b/src/app/dash/dash.component.html
@@ -14,7 +14,7 @@
         </a>
         <mat-menu #menu="matMenu" [overlapTrigger]="false">
             <button mat-menu-item [routerLink]="['logeffort']">Log Effort</button>
-            <button mat-menu-item [routerLink]="['approval']">Approval</button>
+            <button mat-menu-item [routerLink]="['approval']" *ngIf="employee.empinfo.emp_role == ROLES.APPROVER || employee.empinfo.emp_role == ROLES.ADMIN">Approval</button>
             <button mat-menu-item>My Project List</button>
         </mat-menu>
         <a mat-button style="font-size: 16px">Report</a>
